Spring Cloud OpenFeign

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,7 @@ server:
     context-path: /
 
 spring:
-  # todo ?? ?????? ??
+  # todo 개발 데이터 베이스 연결
   datasource:
     url: jdbc:h2:mem:test
     username: sa
@@ -13,19 +13,26 @@ spring:
   jpa:
     hibernate:
       ddl-auto: create
-    show-sql: true # ???? sql ??
+    show-sql: true # 콘솔에 sql 출력
     properties:
       hibernate:
-        format_sql: true # sql?? ??? ??
-        default_batch_fetch_size: 500 # ??? ??? ?? ? ?? ???
-    open-in-view: false # ??? ????? ?? ??? ???? ??? ??
+        format_sql: true # sql 예쁘게 출력
+        default_batch_fetch_size: 500 # 일대다 컬렉션 조회 시 성능 최적화
+    open-in-view: false # 영속성 컨텍스트의 생존범위를 트랜잭션 범위로 한정
 
   servlet:
     multipart:
-      max-file-size: 10MB # ?? ??? ?? ? ??? ?? ??? 10MB ??
-      max-request-size: 100MB # ?? ??? ?? ? ?? ?? ???? 100MB ??
+      max-file-size: 10MB # 파일 업로드 요청 시 하나의 파일 크기를 10MB 제한
+      max-request-size: 100MB # 파일 업로드 요청 시 모든 파일 크기의 합을 100MB 제한
 
 logging:
   level:
-    org.hiberante.type: trace # ???? ??? ??? ?? ? ? ?? ?? ??
+    org.hiberante.type: trace # 콘솔창에 조건에 바인딩 되는 값 및 조회 결과 출력
+    com.app: debug # todo ??? ??
 
+feign:
+  client:
+    config:
+      default:
+        connectTimeout: 5000
+        readTimeout: 5000
