카카오 토큰 발급 구현 - Authorization Code 발급

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -36,3 +36,8 @@ feign:
       default:
         connectTimeout: 5000
         readTimeout: 5000
+
+kakao:
+  client:
+    id: b39994f66f7bcadb1f9d85d1e2f4d384
+    secret: ENOTmVtcFuC5hxqWjLq8imqsni71MUCy
